experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/44/report-44/jadx/output.txt
Test.java:9: error: integer number too large
        this.instanceCount = 6202473916003642764 >>> this.iFld;
                             ^
1 error
